--- a/2020/tsconfig.json
+++ b/2020/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "allowSyntheticDefaultImports": true,
     "lib": ["DOM", "ESNext"]
   }
